<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cf_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/cf_screen_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cf_edit_topic_title"
            android:textAppearance="@style/TextAppearance.CampusForum.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_2"
            android:text="@string/cf_edit_topic_subtitle"
            android:textAppearance="@style/TextAppearance.CampusForum.Body" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_section_spacing"
            android:text="@string/cf_create_topic_title_label"
            android:textAppearance="@style/TextAppearance.CampusForum.BodySmall" />

        <EditText
            android:id="@+id/edit_topic_title_input"
            style="@style/Widget.CampusForum.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_2"
            android:hint="@string/cf_create_topic_title_hint"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/edit_topic_title_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_1"
            android:gravity="end"
            android:text="@string/cf_create_topic_title_counter_initial"
            android:textAppearance="@style/TextAppearance.CampusForum.Caption" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_3"
            android:text="@string/cf_create_topic_content_label"
            android:textAppearance="@style/TextAppearance.CampusForum.BodySmall" />

        <EditText
            android:id="@+id/edit_topic_content_input"
            style="@style/Widget.CampusForum.Input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cf_multiline_input_large"
            android:layout_marginTop="@dimen/cf_spacing_2"
            android:gravity="top|start"
            android:hint="@string/cf_create_topic_content_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="6" />

        <Button
            android:id="@+id/edit_topic_save_button"
            style="@style/Widget.CampusForum.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_section_spacing"
            android:text="@string/cf_edit_topic_save" />

        <Button
            android:id="@+id/edit_topic_cancel_button"
            style="@style/Widget.CampusForum.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_3"
            android:layout_marginBottom="@dimen/cf_spacing_6"
            android:text="@string/cf_action_cancel" />
    </LinearLayout>
</ScrollView>
