<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cf_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/cf_screen_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cf_forgot_title"
            android:textAppearance="@style/TextAppearance.CampusForum.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_2"
            android:text="@string/cf_forgot_subtitle"
            android:textAppearance="@style/TextAppearance.CampusForum.Body" />

        <LinearLayout
            style="@style/Widget.CampusForum.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_section_spacing"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cf_forgot_step_identification"
                android:textAppearance="@style/TextAppearance.CampusForum.Title" />

            <EditText
                android:id="@+id/forgot_email_input"
                style="@style/Widget.CampusForum.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:autofillHints="emailAddress"
                android:hint="@string/cf_label_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/forgot_continue_button"
                style="@style/Widget.CampusForum.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_action_continue" />
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.CampusForum.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cf_forgot_step_security_question"
                android:textAppearance="@style/TextAppearance.CampusForum.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_forgot_security_question_placeholder"
                android:textAppearance="@style/TextAppearance.CampusForum.BodySmall" />

            <EditText
                android:id="@+id/forgot_security_answer_input"
                style="@style/Widget.CampusForum.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:hint="@string/cf_label_security_answer"
                android:inputType="text" />

            <Button
                android:id="@+id/forgot_verify_button"
                style="@style/Widget.CampusForum.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_forgot_verify" />
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.CampusForum.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_4"
            android:layout_marginBottom="@dimen/cf_spacing_6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cf_forgot_step_new_password"
                android:textAppearance="@style/TextAppearance.CampusForum.Title" />

            <EditText
                android:id="@+id/forgot_new_password_input"
                style="@style/Widget.CampusForum.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:autofillHints="newPassword"
                android:hint="@string/cf_forgot_new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/forgot_password_confirm_input"
                style="@style/Widget.CampusForum.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:autofillHints="newPassword"
                android:hint="@string/cf_label_password_confirm"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/forgot_reset_button"
                style="@style/Widget.CampusForum.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_forgot_reset" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
