<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cf_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/cf_screen_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cf_home_title"
            android:textAppearance="@style/TextAppearance.CampusForum.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_2"
            android:text="@string/cf_home_subtitle"
            android:textAppearance="@style/TextAppearance.CampusForum.Body" />

        <EditText
            android:id="@+id/home_search_input"
            style="@style/Widget.CampusForum.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_section_spacing"
            android:autofillHints=""
            android:hint="@string/cf_home_search_hint"
            android:inputType="text" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_4"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Widget.CampusForum.Chip.Selected"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cf_chip_height"
                    android:gravity="center"
                    android:text="@string/cf_home_filter_all" />

                <TextView
                    style="@style/Widget.CampusForum.Chip.Default"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cf_chip_height"
                    android:layout_marginStart="@dimen/cf_spacing_2"
                    android:gravity="center"
                    android:text="@string/cf_category_computer_science" />

                <TextView
                    style="@style/Widget.CampusForum.Chip.Default"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cf_chip_height"
                    android:layout_marginStart="@dimen/cf_spacing_2"
                    android:gravity="center"
                    android:text="@string/cf_category_mathematics" />

                <TextView
                    style="@style/Widget.CampusForum.Chip.Default"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cf_chip_height"
                    android:layout_marginStart="@dimen/cf_spacing_2"
                    android:gravity="center"
                    android:text="@string/cf_category_general" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            style="@style/Widget.CampusForum.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_section_spacing"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.CampusForum.Chip.Default"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cf_chip_height"
                android:gravity="center"
                android:text="@string/cf_category_general" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_demo_topic_group_title"
                android:textAppearance="@style/TextAppearance.CampusForum.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_2"
                android:text="@string/cf_demo_topic_group_body"
                android:textAppearance="@style/TextAppearance.CampusForum.BodySmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_demo_topic_meta_today"
                android:textAppearance="@style/TextAppearance.CampusForum.Caption" />
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.CampusForum.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cf_spacing_4"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.CampusForum.Chip.Default"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cf_chip_height"
                android:gravity="center"
                android:text="@string/cf_category_computer_science" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_demo_topic_database_title"
                android:textAppearance="@style/TextAppearance.CampusForum.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_2"
                android:text="@string/cf_demo_topic_database_body"
                android:textAppearance="@style/TextAppearance.CampusForum.BodySmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cf_spacing_3"
                android:text="@string/cf_demo_topic_meta_yesterday"
                android:textAppearance="@style/TextAppearance.CampusForum.Caption" />
        </LinearLayout>

        <Button
            android:id="@+id/home_create_topic_button"
            style="@style/Widget.CampusForum.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cf_spacing_6"
            android:layout_marginTop="@dimen/cf_section_spacing"
            android:text="@string/cf_home_create_topic" />
    </LinearLayout>
</ScrollView>
